--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,12 +1,15 @@
 .header {
+	position: sticky;
+	top: 0;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;
 	border-bottom: 1px solid #ddd;
 	box-shadow: 0 2px 10px #ddd;
-	/* padding: 0.5rem 9rem; */
 	padding: 0.5rem 0rem;
+	background-color: #fff;
+	z-index: 100;
 }
 
 .header__left {
