--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,11 @@ body {
 	margin: 0;
 }
 
+a {
+	text-decoration: inherit;
+	color: inherit;
+}
+
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 		monospace;
