ADD: answer check logic

--- a/src/pages/Puzzle.css
+++ b/src/pages/Puzzle.css
@@ -75,6 +75,22 @@
 	margin: 0.5rem;
 }
 
+#check-answer {
+	padding: 0.5rem;
+	font-size: 1rem;
+	border-radius: 10px;
+	color: #fff;
+	background-color: #000;
+	cursor: pointer;
+}
+
+#check-answer:disabled,
+#check-answer[disabled] {
+	border: 1px solid #999999;
+	background-color: #cccccc;
+	color: #666666;
+}
+
 /* lg styling */
 @media (min-width: 1024px) {
 	.puzzle {
